# sgug-rpm-tools

./: .gitignore  configure.ac
bash_tools/: readme.md  sgug_bashrc
src/sgug-rpm-tools/: Makefile.am  dependencyset.cpp  dependencyset.hpp  helpers.hpp  installedrpm.cpp  sgug_builddep_extractor.cpp  sgug_dep_engine.cpp  sgug_dep_engine.hpp  sgug_minimal_computer.cpp  sgug_world_builder.cpp  specfile.cpp  specfile.hpp  standalonerpm.cpp  standalonerpm.hpp
